# sup-protocol

./: CMakeLists.txt  ChangeLog  mvn-sonar.sh  pom.xml
cmake/config/: sphinx-conf.py.in  sup-protocol-config.cmake.in
cmake/module/: FindCODAC.cmake  configuration.cmake  installation.cmake
doc/: index.rst  protocol_stack.rst
src/lib/sup/: CMakeLists.txt
src/lib/sup/protocol/: CMakeLists.txt  async_invocation.h  async_invoke.h  async_request.h  base64_variable_codec.h  encoded_variable_t.h  encoded_variables.h  exceptions.cpp  exceptions.h  function_protocol.cpp  function_protocol.h  function_protocol_extract.cpp  function_protocol_extract.h  function_protocol_pack.cpp  function_protocol_pack.h  log_any_functor_decorator.h  log_anyvalue_functor_decorator.h  log_protocol_decorator.h  process_variable.h  protocol.cpp  protocol.h  protocol_encodings.cpp  protocol_encodings.h  protocol_factory.cpp  protocol_factory.h  protocol_factory_utils.cpp  protocol_factory_utils.h  protocol_result.cpp  protocol_result.h  protocol_rpc.cpp  protocol_rpc.h  protocol_rpc_client.cpp  protocol_rpc_client.h  protocol_rpc_client_config.h  protocol_rpc_server.cpp  protocol_rpc_server.h  protocol_rpc_server_config.h  registered_names.h  rpc_exceptions.cpp  rpc_exceptions.h  (+1 more)
src/lib/sup/protocol-di/: CMakeLists.txt  protocol_rpc.cpp  registered_names.h
src/lib/sup/protocol/base/: CMakeLists.txt  anyvalue_utils.cpp  anyvalue_utils.h  async_invocation.cpp  async_invoke.cpp  async_invoke.h  async_invoke_server.cpp  async_invoke_server.h  async_request.cpp  exceptions.cpp  expiration_timeout_handler.cpp  expiration_timeout_handler.h  function_protocol.cpp  function_protocol_extract.cpp  function_protocol_pack.cpp  polling_timeout_handler.cpp  polling_timeout_handler.h  protocol.cpp  protocol_di.cpp  protocol_encodings.cpp  protocol_encodings.h  protocol_result.cpp  protocol_rpc.cpp  protocol_rpc_client.cpp  protocol_rpc_client_config.cpp  protocol_rpc_server.cpp  protocol_rpc_server_config.cpp  timing_utils.cpp  timing_utils.h
src/lib/sup/protocol/decorators/: CMakeLists.txt  log_any_functor_decorator.cpp  log_anyvalue_functor_decorator.cpp  log_protocol_decorator.cpp
src/lib/sup/protocol/factory/: CMakeLists.txt  base64_variable_codec.cpp  process_variable.cpp  process_variable_utils.cpp  process_variable_utils.h  protocol_factory.cpp  protocol_factory_utils.cpp  rpc_client_stack.cpp  rpc_client_stack.h  rpc_logging_client_stack.cpp  rpc_logging_client_stack.h  rpc_logging_server_stack.cpp  rpc_logging_server_stack.h  rpc_server_stack.cpp  rpc_server_stack.h  variable_callback_guard.cpp
test/parasoft/: CMakeLists.txt
test/unit/: CMakeLists.txt  async_invocation_tests.cpp  async_invoke_server_tests.cpp  async_invoke_tests.cpp  encoded_variables_tests.cpp  exceptions_tests.cpp  expiration_timeout_handler_tests.cpp  function_protocol_extract_tests.cpp  function_protocol_pack_tests.cpp  function_protocol_tests.cpp  log_any_functor_decorator_tests.cpp  log_anyvalue_functor_decorator_tests.cpp  log_protocol_decorator_tests.cpp  process_variable_tests.cpp  process_variable_utils_tests.cpp  protocol_encodings_tests.cpp  protocol_factory_utils_tests.cpp  protocol_result_tests.cpp  protocol_rpc_client_async_tests.cpp  protocol_rpc_client_config_tests.cpp  protocol_rpc_client_server_tests.cpp  protocol_rpc_client_tests.cpp  protocol_rpc_server_async_tests.cpp  protocol_rpc_server_tests.cpp  protocol_rpc_tests.cpp  sup_protocol_di_tests.cpp  test_functor.cpp  test_functor.h  test_process_variable.cpp  test_process_variable.h  test_protocol.cpp  test_protocol.h
